Assignment2/modules/security/main.tf
resource "aws_security_group" "a_nginx_sg" {
  name        = "${var.env_prefix}-nginx-sg"
  description = "Security group for Nginx reverse proxy"
  vpc_id      = var.vpc_id

  ingress {
   description= "SSH from my ID"
   from_port = 22 
   to_port = 22 
   protocol = "tcp" 
   cidr_blocks = [var.my_ip]
  }

  ingress {
description = "HTTP from anyhwere"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description= "HTTPS from anywhere"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
description= "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
tags= {
Name= "${var.env_prefix}-nginx-sg"
}
}

resource "aws_security_group" "a_backend_sg" {
  name        = "${var.env_prefix}-backend-sg"
  description = "Security group for backend servers"
  vpc_id      = var.vpc_id

  ingress {
description= "SSH from my IP"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.my_ip]
  }

  ingress {
description= "HTTP from Nginx Security Group only"
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.a_nginx_sg.id]
  }

  ingress {
description= "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
tags={
Name= "${var.env_prefix}-backend-sg"
}
}
